created basic layout

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>Dashboard</title>
 </head>
 <body>
-    
+    <div class="bodyDiv">
+        <div class="sideBar"></div>
+        <div class="headerBar"></div>
+        <div class="contentBar"></div>
+    </div>
 </body>
 </html>
