updated sidebar to become smaller

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <div class="bodyDiv">
         <div class="sideBar"></div>
         <div class="headerBar"></div>
-        <div class="contentBar"></div>
+        <div class="contentBar">
+        </div>
     </div>
 </body>
 </html>
