--- a/index.html
+++ b/index.html
@@ -12,40 +12,52 @@
 <body>
     <div class="bodyDiv">
         <div class="sideBar">
-            <div class = "sideBarIcon material-icons">dashboard</div>
+            <div class = "sideBarIcon" >
+                <div class="material-icons" id = "dashboardIcon">dashboard</div>
+            </div>
             <div class = "DashboardSideBar">Dashboard</div>
             <div></div>
             <div></div>
             <div></div>
+            <div class = "sideBarIcon" >
+                <div class="material-icons" id = "icon">home</div>
+            </div>
+            <div class = "sideBarText">Home</div>
+            <div class = "sideBarIcon" >
+                <div class="material-icons" id = "icon">account_box</div>
+            </div>
+            <div class = "sideBarText">Profile</div>
+            <div class = "sideBarIcon" >
+                <div class="material-icons" id = "icon">message</div>
+            </div>
+            <div class = "sideBarText">Messages</div>
+            <div class = "sideBarIcon" >
+                <div class="material-icons" id = "icon">history</div>
+            </div>
+            <div class = "sideBarText">History</div>
+            <div class = "sideBarIcon" >
+                <div class="material-icons" id = "icon">task</div>
+            </div>
+            <div class = "sideBarText">Tasks</div>
+            <div class = "sideBarIcon" >
+                <div class="material-icons" id = "icon">people</div>
+            </div>
+            <div class = "sideBarText">Communities</div>
             <div></div>
             <div></div>
             <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+            <div class = "sideBarIcon" >
+                <div class="material-icons" id = "icon">settings</div>
+            </div>
+            <div class = "sideBarText">Settings</div>
+            <div class = "sideBarIcon" >
+                <div class="material-icons" id = "icon">support_agent</div>
+            </div>
+            <div class = "sideBarText">Support</div>
+            <div class = "sideBarIcon" >
+                <div class="material-icons" id = "icon">privacy_tip</div>
+            </div>
+            <div class = "sideBarText">Privacy</div>
             <div></div>
             <div></div>
             <div></div>
