added top part of header bar

--- a/index.html
+++ b/index.html
@@ -58,18 +58,16 @@
                 <div class="material-icons" id = "icon">privacy_tip</div>
             </div>
             <div class = "sideBarText">Privacy</div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
         </div>
-        <div class="headerBar"></div>
+        <div class="headerBar">
+            <div class="searchButton "><div class="material-icons">search</div></div>
+            <div class="searchField"><input type="text" class="searchFieldInput"></div>
+            <div class="notifications topright">
+                <div id = "bell" class="material-icons">notifications_active</div>
+                </div>
+                <div class="avatarImage"> <img id = "avatar" src="img_avatar.png" alt="Avatar"> </div>
+            <div class="topright Name">Morgan Oakley</div>
+        </div>
         <div class="contentBar">
         </div>
     </div>
