Finished top bar

--- a/index.html
+++ b/index.html
@@ -67,6 +67,15 @@
                 </div>
                 <div class="avatarImage"> <img id = "avatar" src="img_avatar.png" alt="Avatar"> </div>
             <div class="topright Name">Morgan Oakley</div>
+            <div class="secondIcon"> <img id = "secondAvatar" src="img_avatar.png" alt="Avatar"></div>
+            <div class="hiText">Hi there, <br>
+            <div id = "nameText">Morgan Oakley (@morgan)</div>
+            </div>
+            <div class="buttonsBox">
+                <button class="topSectionButton">New</button>
+                <button class="topSectionButton">Upload</button>
+                <button class="topSectionButton">Share</button>
+            </div>
         </div>
         <div class="contentBar">
         </div>
