added projects section, not finished yet

--- a/index.html
+++ b/index.html
@@ -78,6 +78,19 @@
             </div>
         </div>
         <div class="contentBar">
+            <div class = "yourProjects">Your Projects</div>
+            <div class="projectsBox">
+                <div class="projectSquare">
+                    <div class="projectTitle">Super cool Project</div>
+                    <div class="projectDescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris tempor commodo lacinia.</div>
+                    <div class="projectButtons"></div>
+                </div>
+                <div class="projectSquare">lol</div>
+                <div class="projectSquare">bruh</div>
+                <div class="projectSquare">noo</div>
+                <div class="projectSquare">xd</div>
+                <div class="projectSquare">wow</div>
+            </div>
         </div>
     </div>
 </body>
