finished projects section

--- a/index.html
+++ b/index.html
@@ -83,13 +83,73 @@
                 <div class="projectSquare">
                     <div class="projectTitle">Super cool Project</div>
                     <div class="projectDescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris tempor commodo lacinia.</div>
-                    <div class="projectButtons"></div>
+                    <div class="projectButtons"><span class="material-icons">
+                        star
+                        <span class="material-icons">
+                            visibility
+                            </span>
+                            <span class="material-icons">
+                                map
+                                </span>
+                        </span></div>
                 </div>
-                <div class="projectSquare">lol</div>
-                <div class="projectSquare">bruh</div>
-                <div class="projectSquare">noo</div>
-                <div class="projectSquare">xd</div>
-                <div class="projectSquare">wow</div>
+                <div class="projectSquare">
+                    <div class="projectTitle">Moneymaker</div>
+                    <div class="projectDescription">In eleifend velit massa, ut semper magna venenatis quis. Integer sodales purus pharetra urna lobortis tempus. Aenean ultricies iaculis mauris, nec vestibulum sapien pharetra ac.</div>
+                    <div class="projectButtons"><span class="material-icons">
+                        star
+                        <span class="material-icons">
+                            visibility
+                            </span>
+                            <span class="material-icons">
+                                map
+                                </span>
+                        </span></div>
+                </div>
+                <div class="projectSquare">                    <div class="projectTitle">Less Cool Project</div>
+                <div class="projectDescription">Quisque congue varius sapien, a pharetra est. Sed nisi turpis, dictum vitae orci nec, pulvinar consectetur tellus. Vestibulum efficitur mi sed pretium gravida.</div>
+                <div class="projectButtons"><span class="material-icons">
+                    star
+                    <span class="material-icons">
+                        visibility
+                        </span>
+                        <span class="material-icons">
+                            map
+                            </span>
+                    </span></div></div>
+                <div class="projectSquare">                    <div class="projectTitle">Impossible app</div>
+                <div class="projectDescription">Nullam vestibulum ac mauris et sodales. Donec purus felis, placerat non tristique at, malesuada sit amet lectus.</div>
+                <div class="projectButtons"><span class="material-icons">
+                    star
+                    <span class="material-icons">
+                        visibility
+                        </span>
+                        <span class="material-icons">
+                            map
+                            </span>
+                    </span></div></div>
+                <div class="projectSquare">                    <div class="projectTitle">Easy Peasy App</div>
+                <div class="projectDescription">Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec arcu libero, porta eget metus sed, convallis rutrum arcu. Aliquam eu suscipit diam, et cursus diam.</div>
+                <div class="projectButtons"><span class="material-icons">
+                    star
+                    <span class="material-icons">
+                        visibility
+                        </span>
+                        <span class="material-icons">
+                            map
+                            </span>
+                    </span></div></div>
+                <div class="projectSquare">                    <div class="projectTitle">Adblocker</div>
+                <div class="projectDescription">Pellentesque sollicitudin leo ac ullamcorper suscipit. Sed vehicula auctor pellentesque. Mauris congue tincidunt volutpat. Maecenas laoreet mattis nisi. Fusce elementum dolor vitae lacus faucibus malesuada.</div>
+                <div class="projectButtons"><span class="material-icons">
+                    star
+                    <span class="material-icons">
+                        visibility
+                        </span>
+                        <span class="material-icons">
+                            map
+                            </span>
+                    </span></div></div>
             </div>
         </div>
     </div>
