--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </div>
         </div>
         <div class="contentBar">
-            <div class = "yourProjects">Your Projects</div>
+            <div class="projects"><div class = "yourProjects">Your Projects</div>
             <div class="projectsBox">
                 <div class="projectSquare">
                     <div class="projectTitle">Super cool Project</div>
@@ -150,6 +150,48 @@
                             map
                             </span>
                     </span></div></div>
+            </div></div>
+            
+            <div class="right-side-bar">
+                <h1 class="content-bar-Header">Announcements</h1>
+                <div class="announcementBox">
+                    <div class="announcement-section">
+                        <div class="side-bar-title">Site Maintenance</div>
+                        <div class="side-bar-description">Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec arcu libero, porta eget metus sed, convallis rutrum arcu.</div>
+                    </div>
+                    <div class="announcement-section">
+                        <div class="side-bar-title">Community Share Day</div>
+                        <div class="side-bar-description">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</div>
+                    </div>
+                    <div class="announcement-section" id = "noBorder">
+                        <div class="side-bar-title">Updated Privacy Policy</div>
+                        <div class="side-bar-description">At vero eos et accusamus et iusto odio.</div>
+                    </div>
+                </div>
+                <h1 class="content-bar-Header">Trending</h1>
+                <div class="trending-bar">
+                    <div class="trending-box">
+                        <div class="avatarImage"> <img id = "trending-avatar" src="img_avatar.png" alt="Avatar"> </div>
+                        <div class="trending-text">
+                            <div class="trending-tag">@tegan</div>
+                            <div class="trending-status">World Peace Builder</div>
+                        </div>
+                    </div>
+                    <div class="trending-box">
+                        <div class="avatarImage"> <img id = "trending-avatar" src="img_avatar.png" alt="Avatar"> </div>
+                        <div class="trending-text">
+                            <div class="trending-tag">@tegan</div>
+                            <div class="trending-status">Super Cool Project</div>
+                        </div>
+                    </div>
+                    <div class="trending-box">
+                        <div class="avatarImage"> <img id = "trending-avatar" src="img_avatar.png" alt="Avatar"> </div>
+                        <div class="trending-text">
+                            <div class="trending-tag">@tegan</div>
+                            <div class="trending-status">No Traffic Maker</div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
